@@ -538,6 +538,7 @@ Michael Guravage
 Lars Gustäbel
 Thomas Güttler
 Jonas H.
+Joseph Hackman
 Barry Haddow
 Philipp Hagemeister
 Paul ten Hagen
